samples/_failures_safe/1761159508_a50dc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9926fa73.c: In function ‘main’:
./samples/SAFE/__tmp_9926fa73.c:144:18: error: ‘de’ undeclared (first use in this function)
  144 |     buffer_free(&de
      |                  ^~
./samples/SAFE/__tmp_9926fa73.c:144:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9926fa73.c:144:20: error: expected ‘)’ at end of input
  144 |     buffer_free(&de
      |                ~   ^
      |                    )
./samples/SAFE/__tmp_9926fa73.c:144:5: error: expected declaration or statement at end of input
  144 |     buffer_free(&de
      |     ^~~~~~~~~~~
